fix: wrap footer-links contact social icons inside div class social-icons to copy hover effect used in previous social-icons

--- a/styles.css
+++ b/styles.css
@@ -375,6 +375,9 @@ form .btn.btn2 {
 .footer-links h3 {
   margin-bottom: 20px;
 }
+.footer-links .col-middle span {
+  line-height: 1.8;
+}
 .col-left {
   flex-basis: 30%;
 }
